fetch projects from api & fix navbar page on mobile & fix filtering in portfolio page

--- a/public/scss/components/portfolio.scss
+++ b/public/scss/components/portfolio.scss
@@ -84,6 +84,10 @@
   transform: scale(1.2);
   opacity: 1;
   cursor: pointer;
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
 }
 
 .up-category-text {
